docs/tests/nameres/custom_types/valid/InterfaceShadow.src
// Valid

let int a;
interface Printable {
    let int a;
    fn void print(string msg);  
}