docs/tests/nameres/custom_types/invalid/GenStructImplements.src
// Invalid

interface Printable {
    fn void print(string msg);
}

struct str <T> : Printable {
    fn void print(string msg);
}